Search results by user group + Fixed alignment for calendar + Messages in Romanian for photo upload

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -12,7 +12,6 @@
   padding-top: 70px;
   padding-bottom: 50px;
 }
-
 .articlesStyles{
   .articleBox{
     padding: 5px 5px 5px 5px;
@@ -559,7 +558,7 @@ ul.products li {
   color: #006d69;
 }
 .date2 {
-  margin-top: -5%;
+  margin-top: -25px;
 }
 .date3{
   margin-top: -2%;
@@ -782,6 +781,9 @@ hr{
 .justify{
   text-align: justify;
 }
+.center{
+  text-align: center;
+}
 .newFont{
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   color: white;
@@ -898,4 +900,7 @@ border: 1px solid transparent;
 .activeArea{
   background-color: @MSDTitle;
   color: white;
+}
+.top2percent{
+  margin-top: -10px;
 }
